<resources>
    <string name="app_name">AppDespesas</string>
    <string name="organize_texto">Organize suas contas\n de onde estiver</string>
    <string name="simples_texto">Simples e fácil de usar</string>
    <string name="tenha_um_controle_melhor_n_sobre_o_seu_dinheiro">Tenha um controle melhor\n sobre o seu dinheiro</string>
    <string name="categorize">Categorize seus lançamentos e vendo o\n destino de cada centavo</string>
    <string name="nunca_esqueca">Nunca mais esqueça de\n pagar uma conta</string>
    <string name="receba_alertas">Receba alertas quando quiser</string>
    <string name="tudo_organizado_na_n_palma_da_sua_m_o">Tudo organizado na\n palma da sua mão</string>
    <string name="use_no_seu_smartphone">Use no seu smartphone</string>
    <string name="crie_conta">Crie sua conta grátis</string>
    <string name="ja_tenho_uma_conta">Já tenho uma conta</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="junte_se_a_nos">Junte-se a nós</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="mensagem_sucesso_cadastro_usuario">Usuário cadastrado com sucesso!</string>
    <string name="mensagem_erro_cadastro_usuario">\"Erro ao cadastrar o usuário: \"</string>
    <string name="monetario">R$ 00,00</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="saudacao">Saudação</string>
    <string name="valor">Valor</string>
    <string name="categoria">Categoria</string>
    <string name="titulo">Titulo</string>
    <string name="data_de_lancamento">Data de Lançamento</string>
    <string name="valor_rs">Valor (R$)</string>
</resources>
